feat: v0.3 wave 1 — record/VO projection, seek pagination, Oracle/SQLServer dialects
- toList(Class<R>) / toPageResult(pageNo, pageSize, Class<R>) project rows
  onto Java records or VO classes; components match result-set labels by
  name ignoring case and underscores, with type coercion and per-type plan
  caching (RowProjector). Test matrix T17.
- seekAfter(values...) adds keyset pagination: renders the nested OR
  predicate chain honouring per-column sort direction, composes with user
  conditions and logic delete, validates orderBy presence, value count and
  nulls. Test matrix T18.
- OracleDialect and SqlServerDialect: quoting, OFFSET/FETCH pagination
  (SQL Server appends a neutral ORDER BY when absent), LIKE ESCAPE and
  SEQUENCE support; JDBC URL auto-detection. Test matrix T19.
- fixed: Tuple NPE on SQL NULL column values (regression from the Map-free
  constructor rewrite).
- docs: DESIGN.md 5.12/5.13 contracts, dialect matrix, T17-T19; README fully
  rewritten around the static facade, released 0.2.0 artifacts and the
  dev/0.3.0 roadmap.